unpackaged/main/default/objects/nbavs__Insight_Note__c/nbavs__Insight_Note__c.object-meta.xml
<CustomObject>
    <label>Insight Note</label>
    <nameField>
        <displayFormat>Note-{0000}</displayFormat>
        <label>Insight Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>