unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>General Note</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Offensive Behaviour</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Excellent Behaviour</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Neutral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>