unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Insights__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights__c</fullName>
    <label>Insights</label>
    <referenceTo>nbavs__Insights__c</referenceTo>
    <relationshipLabel>Insight Notes</relationshipLabel>
    <relationshipName>Insight_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>