unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Insights_Player_Link__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights_Player_Link__c</fullName>
    <formula>nbavs__Insights__r.nbavs__Insights_Player__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insight Player Link</label>
    <type>Text</type>
</CustomField>