unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Is_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Is_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Acknowledged</label>
    <type>Checkbox</type>
</CustomField>