unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>