unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Natterbox_Related_To__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Natterbox_Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox Related To</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insight Notes (Natterbox Related To)</relationshipLabel>
    <relationshipName>Insight_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>