unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Natterbox_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Natterbox_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox Owner</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insight Notes</relationshipLabel>
    <relationshipName>Insight_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>