unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__NoteLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>nbavs__NoteLastModifiedDate__c</fullName>
    <label>NoteLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>