unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Polarity__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Polarity__c</fullName>
    <label>Polarity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>