unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Relating_to__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Relating_to__c</fullName>
    <label>Natterbox Related to uuid</label>
    <length>64</length>
    <type>Text</type>
</CustomField>