unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__SupervisorCreated__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SupervisorCreated__c</fullName>
    <formula>nbavs__Natterbox_User__c != nbavs__Insights__r.nbavs__Natterbox_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Created</label>
    <type>Checkbox</type>
</CustomField>