unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Thread__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Thread__c</fullName>
    <label>Thread</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>