unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__User_Activity__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User_Activity__c</fullName>
    <label>User Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>