unpackaged/main/default/objects/nbavs__Insight_Note__c/fields/nbavs__Version__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>